--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "predis/predis": "^1.1",
         "symfony/filesystem": "^5.2"
     },
     "require-dev": {
